删除未完成的文档

--- a/_posts/2017-03-17-iOS 推送，应用相关的生命周期.md
+++ b/_posts/2017-03-17-iOS 推送，应用相关的生命周期.md
@@ -1,8 +1,6 @@
 ---
 layout: post
-title:  "iOS 推送，应用相关的生命周期"
-date:   2017-03-17 9:32:25 +0800
-categories: jekyll update
+comments: true
 ---
 最近在做iOS推送相关需求的时候踩了一些坑。
 大概的需求是这样的：推送分2个类型，1.紧急推送 2.普通推送。
