--- a/_posts/2018-8-20-设计模式之装饰器模式.md
+++ b/_posts/2018-8-20-设计模式之装饰器模式.md
@@ -1,4 +1,8 @@
-#装饰者模式
+---
+layout: post
+comments: true
+---
+
 装饰者模式是组合模式的一种，相对于其他的组合模式，装饰者模式并不常见；
 装饰者模式，动态的将责任附加到对象上，若要扩展功能，装饰者模式提供了比继承更具有弹性的替代方案。
 ![截屏2020-08-27 下午1.51.54.png](https://i.loli.net/2020/08/27/mCZHBTJoDauL7gn.png)
