--- a/_posts/2020-03-04-LeetCode刷题--异或运算.md
+++ b/_posts/2020-03-04-LeetCode刷题--异或运算.md
@@ -1,4 +1,8 @@
-# LeetCode刷题--异或运算
+---
+layout: post
+comments: true
+---
+
 ## 最近在刷题，基本都是简单的题目，其中有一题思考了很多都没有好的思路。
 > [简单题-136. 只出现一次的数字](https://leetcode-cn.com/problems/single-number/)
 > 给定一个非空整数数组，除了某个元素只出现一次以外，其余每个元素均出现两次。找出那个只出现了一次的元素。
