--- a/_posts/2020-11-20-OEM平台构建方案.md
+++ b/_posts/2020-11-20-OEM平台构建方案.md
@@ -22,7 +22,7 @@ comments: true
 
 ## 开发过程中碰到的问题
 
-- Python3 环境，这个是在太恶劣了，最后没办法选择**Anaconda**
+- Python3 环境，这个实在太恶劣了，最后没办法选择**Anaconda**
 
 - iOS 证书安装问题，`security unlock-keychain -p "<Password>" ~/Library/Keychains/login.keychain`
 
@@ -32,7 +32,7 @@ comments: true
   import pyOpenssl
   
   p12 = load_pkcs12(file("./path/to/your.p12", 'rb').read(), 'YOUR_P12_PASSWORD')
-  print(p12.get_friendlyname())
+  print(p12.get_friendlyname()) #如果返回的结果有`u 最好decode(utf-8)
   ```
 
 
@@ -41,4 +41,4 @@ comments: true
 
 ## 总结
 
-因为时间比较紧迫，原本想通过**jenkins**方式，python只负责通讯和业务逻辑，这样的好处在于非常方便直观的查看每次的构建日志。反正现在丢在哪里也比较稳定的在跑也不想折腾了。
+因为时间比较紧迫，原本想通过**jenkins**方式，**python**只负责通讯和业务逻辑，这样的好处在于非常方便直观的查看每次的构建日志。反正现在丢在哪里也比较稳定，也不想折腾了。
