--- a/_posts/2020-11-20-Python实现一个简单的自定义构建脚步.md
+++ b/_posts/2020-11-20-Python实现一个简单的自定义构建脚步.md
@@ -1,5 +1,5 @@
 ---
-title: 'python 搭建OEM的一个思路'
+title: 'Python实现一个简单的自定义构建脚步'
 layout: post
 comments: true
 ---
@@ -37,7 +37,7 @@ comments: true
 
 
 
-接下来就是一些业务逻辑了，没啥好讲的。
+接下来就是一些业务逻辑了，没啥好讲的；完成这些功能后，这个重新构建脚本就是完全自动化。
 
 ## 总结
 
