--- a/_posts/2021-02-07-iOS 2021年面经.md
+++ b/_posts/2021-02-07-iOS 2021年面经.md
@@ -31,16 +31,12 @@ comments: true
 
 ## 2月8日 7牛
 
-To be continue...
+感觉招聘信息和面试的岗位不匹配啊，技术面试下来，全程都是问：音视频技术和音视频传输协议；自我认为，不涉及底层实现，基本的概念都还清楚，大概问下面试官，招聘音视频移动的SDK开发和demo开发，感觉招聘个c++ 音视频开发不是应该更香么... SDK最多也是已有的c/c++上做个API的封装，学个1周OC/Swift开发应该就够了。
 
 ## 2月20日 快手
 
-比较期待，因为要徒手撸算法了，要的就是这种感觉～
+to be continue
 
 ## 2月21日 网易云
 
-我其实想去网易做游戏，人家看我没经验，不要我～ 但是我可以学啊～希望可以撸算法和数据结构
-
-## 字节和蚂蚁
-
-还没安排时间，算法不要太为难我... 不要太难的hard...
+to be continue
