--- a/_cache/2021-03-08-objc4 流言终结者.md---.md
+++ b/_cache/2021-03-08-objc4 流言终结者.md---.md
@@ -78,7 +78,9 @@ _objc_rootInit(id obj)
 
 ## UIView设置Frame，是直接设置CALayer的Frame么，为什么CALayer有隐式动画而UIView没有
 
-## [[NSNumber alloc] initWithInt:1] 和 [[NSNumber alloc] initWithLong:1] 有什么区别
+## NSNumber *number1 = @(1); 和 NSNumber *number2 = @(0xEFFFFFFFFFFFFFFF); 有什么区别
+
+总结：TaggedPointer的区别，理论上TaggedPointer可以存储7个字节+ 4bit = 60bit的大小数据
 
 ## ARC下 什么情况下会执行对象的autoRelease方法
 
@@ -89,6 +91,10 @@ _objc_rootInit(id obj)
 ## Swift中扩展的函数，是什么调用方式
 
 ## Swift中结构体中使用Block，会出现循环引用的情况么？
+
+## Swift中数组范型可以用协议么？为什么
+
+
 
 
 
